# ml_project_template

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: README.md  pyproject.toml  tasks.py
{{ cookiecutter.repo_name }}/jobs/: evaluate.sh  train.sh
{{ cookiecutter.repo_name }}/tests/: test_data.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.project_name }}/: train.py
