[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = {{ cookiecutter.repo_name }}
version = "0.0.1"
description = {{ cookiecutter.description }}
authors = [
  { name = {{ cookiecutter.author_name }} },
]

readme = "README.md"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["I", "N", "E", "W", ]

[tool.coverage.run]
omit = ["tests/*"]
